--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 webview.Close(null,null,['killSession=Y&RedirPageId=exit']);
             });
             document.getElementById("login").addEventListener("click", function(){
-                webview.Close(null,null,['killSession=Y&RedirPageId=login']);
+                webview.Close(null,null,['killSession=Y&RedirPageId=p2pPostlogin']);
             });
         </script>
 	</body>
